Fix scala issues