@@ -9,7 +9,6 @@ import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import io.trino.Session;
 import io.trino.client.ClientCapabilities;
-import io.trino.plugin.tpch.TpchPlugin;
 import io.trino.spi.connector.CatalogSchemaName;
 import io.trino.sql.SqlPath;
 import io.trino.testing.DistributedQueryRunner;
@@ -18,46 +17,29 @@ import io.trino.testing.TestingSession;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
 import org.testng.Assert;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
 
+import static org.testng.Assert.*;
+
+
 public class TestTransportPlugin {
-  private static final String UDF_REPO = TestTransportPlugin.class.getClassLoader()
+  private final String udfRepoDir = TestTransportPlugin.class.getClassLoader()
       .getResource("transport-udf-repo")
       .getPath();
-
   private DistributedQueryRunner queryRunner;
-  private Session session;
 
   @BeforeClass
   public void setUp() throws Exception {
     SqlPath sqlPath = new SqlPath(List.of(new CatalogSchemaName("linkedin", "transport")), "linkedin_transport");
-    session = TestingSession.testSessionBuilder()
-        .setPath(sqlPath)
-        .setClientCapabilities((Set<String>) Arrays.stream(ClientCapabilities.values())
-            .map(Enum::toString)
-            .collect(ImmutableSet.toImmutableSet()))
-        .build();
-
-    queryRunner = DistributedQueryRunner.builder(session)
-        .build();
-
+    Session session = TestingSession.testSessionBuilder().setPath(sqlPath).setClientCapabilities((Set) Arrays.stream(
+        ClientCapabilities.values()).map(Enum::toString).collect(ImmutableSet.toImmutableSet())).build();
+    queryRunner = DistributedQueryRunner.builder(session).build();
     queryRunner.installPlugin(new TransportPlugin());
-    queryRunner.installPlugin(new TpchPlugin());
-
-    queryRunner.createCatalog(
-        "linkedin",
-        "transport",
-        ImmutableMap.of("transport.udf.repo", UDF_REPO));
-
-    queryRunner.createCatalog(
-        "tpch",
-        "tpch",
-        Map.of());
+    queryRunner.createCatalog("linkedin", "transport", ImmutableMap.of("transport.udf.repo", udfRepoDir));
   }
 
   @AfterClass(alwaysRun = true)
@@ -70,48 +52,41 @@ public class TestTransportPlugin {
 
   @Test
   public void testTransportUdfIsAccessible() {
-    MaterializedResult result = queryRunner.execute(
-        session,
-        "SELECT linkedin.transport.array_element_at(ARRAY[1,2,3], 2)");
-    Assert.assertEquals(result.getOnlyValue(), 3);
+    String query = "SELECT linkedin.transport.array_element_at(array[1,2,3], 2)";
+    MaterializedResult result = queryRunner.execute(query);
+    Assert.assertEquals(result.getRowCount(), 1);
+    Assert.assertEquals(((int) result.getMaterializedRows().get(0).getField(0)), 3);
+
+    String camelCaseQuery = "SELECT linkedin.transport.Array_Element_At(array[1,2,3], 2)";
+    MaterializedResult camelCaseResult = queryRunner.execute(camelCaseQuery);
+    Assert.assertEquals(camelCaseResult.getRowCount(), 1);
+    Assert.assertEquals(((int) camelCaseResult.getMaterializedRows().get(0).getField(0)), 3);
   }
 
   @Test
-  public void testTransportUdfAppearsInShowFunctions() {
-    MaterializedResult rows = queryRunner.execute(
-        session,
-        "SHOW FUNCTIONS FROM linkedin.transport LIKE 'array_element_at'");
-    Assert.assertEquals(rows.getRowCount(), 1);
-    Assert.assertEquals(rows.getMaterializedRows()
-            .get(0)
-            .getField(0),
-        "array_element_at");
+  public void testTransportUdfInShowFunctions() {
+    String showFunctionQuery = "SHOW FUNCTIONS FROM linkedin.transport LIKE 'array_element_at'";
+    MaterializedResult showFunctionResult = queryRunner.execute(showFunctionQuery);
+    Assert.assertEquals(showFunctionResult.getRowCount(), 1);
+    Assert.assertEquals(((String) showFunctionResult.getMaterializedRows().get(0).getField(0)), "array_element_at");
   }
 
   @Test
-  @SuppressWarnings("unchecked")
-  public void testEachUdfGetsSeparateClassLoader() {
-    TransportConfig cfg = new TransportConfig().setTransportUdfRepo(UDF_REPO);
-    TransportConnector connector = new TransportConnector(cfg);
-    TransportFunctionProvider provider =
-        (TransportFunctionProvider) connector.getFunctionProvider().get();
+  public void testTransportUDFClassLoader() {
+    TransportConfig config = new TransportConfig();
+    config.setTransportUdfRepo(udfRepoDir);
+    TransportConnector connector = new TransportConnector(config);
+    TransportFunctionProvider fnProvider = (TransportFunctionProvider) connector.getFunctionProvider().get();
 
-    ClassLoader wrapperParent = StdUdfWrapper.class.getClassLoader();
-    Set<ClassLoader> udfLoaders = new HashSet<>();
-
-    provider.getFunctions().values().forEach(wrapper -> {
-      ClassLoader cl = wrapper.getClass().getClassLoader();
-      udfLoaders.add(cl);
-      Assert.assertTrue(cl instanceof TransportUDFClassLoader,
-          "UDF should be loaded by TransportUDFClassLoader");
-      Assert.assertSame(wrapper.getClass()
-              .getSuperclass()
-              .getClassLoader(),
-          wrapperParent,
-          "StdUdfWrapper itself must be loaded by parent loader");
-    });
-
+    ClassLoader parentStdUdfWrapperClassloader = StdUdfWrapper.class.getClassLoader();
+    Set<ClassLoader> classLoaders = new HashSet<>();
+    for (StdUdfWrapper udfWrapper : fnProvider.getFunctions().values()) {
+      classLoaders.add(udfWrapper.getClass().getClassLoader());
+      assertTrue(udfWrapper.getClass().getClassLoader() instanceof TransportUDFClassLoader);
+      // the classloader of the superclass (StdUdfWrapper) should always be the same parent loader
+      assertEquals(udfWrapper.getClass().getSuperclass().getClassLoader(), parentStdUdfWrapperClassloader);
+    }
     // two UDF JARs are being loaded, so we expect two classloaders
-    Assert.assertEquals(udfLoaders.size(), 2);
+    assertEquals(classLoaders.size(), 2);
   }
 }
